sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value k
      if (!isSmaller(k,k+1)){
                     ^AlgCombSort:11: error: not found: value k
      if (!isSmaller(k,k+1)){
                       ^AlgCombSort:12: error: not found: value k
        swap(k+1,k)
             ^AlgCombSort:12: error: not found: value k
        swap(k+1,k)
                 ^